# weclaw-cua

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  README_CN.md  claude.md  control_panel.py  control_panel_pro.py  entry.py  install.ps1  list_target_chats.py  main.py  panel_state.py  pipeline_a.py  pyproject.toml  requirements-macos.txt  requirements-windows.txt  requirements.txt  run.sh  start.ps1
OpenClaw_WeChatRemoval_skill/: README.md  SKILL.md
algo_a/: ADMIN_BOT_PARITY.md  DEVGUIDE.md  TESTING.md  __init__.py  async_chat_extraction.py  capture_chat.py  click_into_chat.py  extract_messages.py  list_configured_chat_names.py  list_target_chats.py  list_target_chats_win.py  list_unread_chats.py  llm_image_prep.py  llm_openrouter_headers.py  long_image_chunk_extract.py  merge_similar_messages.py  pipeline_a.py  pipeline_a_mac_nav.py  pipeline_a_stepwise.py  pipeline_a_win.py  postprocess_messages.py  process_multiple_chats.py  process_one_chat.py  process_one_chat_llm.py  read_long_image_messages.py  read_messages_from_uitree.py  read_visible_messages.py  refine_call_messages.py  refine_voice_video_messages.py  scroll_chat_to_bottom.py  sidebar_find_chat.py  sidebar_scroll_to_top.py  write_messages_json.py
algo_b/: __init__.py  build_report_prompt.py  generate_report.py  load_messages.py  pipeline_b.py  test_algo_b.py  test_part_b_local.py
algorithm_a/: __init__.py  capture_scroll_screenshots.py  detect_new_messages.py  extract_structured_messages.py  locate_unread_position.py  pipeline_a.py  stitch_screenshots.py  write_group_json.py
algorithm_b/: __init__.py  answer_customer_question.py  load_customer_context.py  load_customer_group_mapping.py  pipeline_b.py  reload_customer_group_mapping.py  split_customer_json.py  use_webhook.py
config/: __init__.py  computer_mac.yaml  computer_windows.yaml  config.json.example  model.yaml  weclaw_config.py
docs/: ARCHITECTURE.md  DISTRIBUTION.md  OVERVIEW.md  PLATFORM_GUIDE.md  WECLAW_SOCIAL_MEDIA_CAMPAIGN.md  architecture-cn.md  architecture.md  cli-reference.md  installation-cn.md  installation.md
modules/: ax_clicks.py  banner_checker.py  crop_utils.py  group_classifier.py  message_reader.py  removal_executor.py  removal_verifier.py  scaffolding_clicks.py  scroll_actions.py  suspicious_detector.py  task_types.py
platform_mac/: __init__.py  chat_panel_detector.py  chat_panel_scroll_capture.py  driver.py  find_wechat_window.py  grant_permissions.py  image_stitcher.py  left_nav_messages_icon.py  mac_ai_driver.py  mac_driver_messages.py  macos_window.py  messages_nav_click_vision.py  ocr.py  screenshot.py  sidebar_detector.py  sidebar_ocr.py  ui_tree_reader.py
platform_win/: __init__.py  driver.py  find_wechat_window.py  grant_permissions.py  sidebar_ocr_debug.py  ui_tree_reader.py  vision.py
runtime/: agent_session.py  computer_session.py  llm_utils.py  model_session.py
sample_data/: Alice.json  Bob.json  Cathy.json  Group A.json  Group B.json
scripts/: benchmark_vlm_image_formats.py  debug_mac_capture_chat.py  debug_mac_click_chat.py  debug_mac_hybrid.py  debug_mac_multiple_chats.py  debug_mac_read_visible_messages.py  debug_mac_sidebar_unread.py  debug_mac_wechat_tree.py  debug_process_one_chat.py  fill_stepwise_responses_openclaw_gateway.py  install_openclaw_skill.sh  openrouter_credits.py  replay_chat_stitch.py  run_full_pipeline.py  submit_batch_multichat.sh  test_part_b_local.py  verify_openclaw_packaging.py
shared/: __init__.py  chat_chunk_extraction.py  chat_context.py  chat_context_paths.py  datatypes.py  llm_client.py  llm_routing.py  message_context_chunk.py  message_dedup.py  message_schema.py  message_time_window.py  ocr_hunyuan.py  ocr_hunyuan_parser.py  ocr_paddle.py  openclaw_gateway.py  platform_api.py  run_manifest.py  sidebar_classification.py  sidebar_selection.py  sidebar_ui_chrome.py  stepwise_backend.py  vision_ai.py  vision_backend.py  vision_image_codec.py  vision_prompts.py  vision_response_json.py  vlm_direct_client.py  vlm_format_benchmark.py  vlm_image_variants.py
skills/: wechat_removal.md
tests/: test_algo_b.py  test_async_chat_extraction.py  test_chat_chunk_extraction.py  test_chat_context.py  test_chat_panel_detector.py  test_chat_panel_scroll_capture.py  test_cli_startup.py  test_driver.py  test_finalize_recent_window.py  test_image_stitcher.py  test_llm_routing.py  test_scroll.py  (+13 more)
(+87 files in other folders)
