[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weclaw-cua"
version = "0.2.0"
description = "WeClaw-CUA — vision-based WeChat message capture and report CLI for LLMs"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    {name = "WeClaw-CUA Contributors"},
]
keywords = ["wechat", "weclaw", "weclaw-cua", "cua", "cli", "vision", "llm", "ai", "message-capture"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "click>=8.1,<9",
    "numpy",
    "opencv-python",
    "Pillow",
    "screenshot-stitcher",
    "pyautogui",
    "pywin32; sys_platform == 'win32'",
]

[project.optional-dependencies]
llm = [
    "litellm",
    "openai",
]
win-ocr = [
    "rapidocr-onnxruntime>=1.3",
]
ocr = [
    "rapidocr-onnxruntime>=1.3",
]
hunyuan-ocr = [
    "torch>=2.7.1",
    "torchvision",
    "huggingface_hub",
    "accelerate",
    "transformers @ git+https://github.com/huggingface/transformers@82a06db03535c49aa987719ed0746a76093b1ec4",
]
macos = [
    "pyobjc-core",
    "pyobjc-framework-ApplicationServices",
    "pyobjc-framework-Cocoa",
    "pyobjc-framework-Quartz",
    "pyobjc-framework-Vision",
]
dev = [
    "build",
    "twine",
    "pyinstaller",
]

[project.urls]
Homepage = "https://github.com/Numaira-Technology/weclaw-cua"
Repository = "https://github.com/Numaira-Technology/weclaw-cua"

[project.scripts]
weclaw-cua = "weclaw_cli.main:cli"
weclaw = "weclaw_cli.main:cli"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = [
    "algo_a",
    "algo_b",
    "config",
    "platform_mac",
    "platform_win",
    "shared",
    "utils",
    "weclaw_cli",
    "weclaw_cli.commands",
    "weclaw_cli.output",
]
exclude = [
    "tests",
    "tests.*",
]

[tool.setuptools.package-data]
weclaw_cli = ["bin/*"]
